modified:   HTML-CSS/index.html

--- a/HTML-CSS/index.html
+++ b/HTML-CSS/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Página Web Avançada</h1>
+        <h1>José Edmilton</h1>
     </header>
     <nav>
         <a href="#home">Home</a>
@@ -19,11 +19,13 @@
     <main>
         <section id="home">
             <h2>Bem-vindo</h2>
-            <p>Esta é uma página web avançada com HTML e CSS.</p>
+            <p>Esta é minha página web utilizando HTML e CSS.</p>
         </section>
         <section id="sobre">
             <h2>Sobre</h2>
-            <p>Informações sobre a página.</p>
+            <p>Meu nome e José Edmilton, <br> Estou estudando no momento Análise e desenvolvimento de sistemas na Unifatecie.
+              No momento trabalho como Supervisor de Logística na <a href="https://rebotecbrasil.com.br/" target="_blank" rel="noopener noreferrer">REBOTEC BRASIL</a>, E estou em busca de opotunidades na area de TI. 
+            </p>
         </section>
         <section id="contato">
             <h2>Contato</h2>
@@ -66,7 +68,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2024 Minha Página Web</p>
+        <p>© 2024 By Jose Edmilton</p>
     </footer>
 </body>
 </html>
