--- a/SITE-QUIZZ/index.html
+++ b/SITE-QUIZZ/index.html
@@ -25,17 +25,17 @@
     </section>
     <!--Pergunta 1: múltipla escolha-->
     <section>
-      <h2>Pergunta 1: Qual linguagem é usada para estruturar páginas web?</h2>
-      <form>
-        <input type="radio" value="Python" id="p1a" name="pergunta1">
-        <label for="p1a">Python</label>
-        <input type="radio" value="JavaScript" id="p1b" name="pergunta1">
-        <label for="p1b">JavaScript</label>
-        <input type="radio" value="HTML" id="p1c" name="pergunta1">
-        <label for="p1c">HTML</label>
-        <input type="radio" value="Ruby" id="p1d" name="pergunta1">
-        <label for="p1d">Ruby</label>
-      </form>
+        <h2>Pergunta 1: Qual linguagem é usada para estruturar páginas web?</h2>
+        <form>
+            <input type="radio" value="Python" id="p1a" name="pergunta1">
+            <label for="p1a">Python</label><br>
+            <input type="radio" value="HTML" id="p1b" name="pergunta1">
+            <label for="p1b">HTML</label><br>
+            <input type="radio" value="Javascript" id="p1c" name="pergunta1">
+            <label for="p1c">Javascript</label><br>
+            <input type="radio" value="Ruby" id="p1d" name="pergunta1">
+            <label for="p1d">Ruby</label><br>
+        </form>
     </section>
     <!--Pergunta 2: texto-->
     <section>
