--- a/SITE-QUIZZ/index.html
+++ b/SITE-QUIZZ/index.html
@@ -173,8 +173,8 @@
     </section>
   </main>
   <footer>
-    <p>Quiz de programação. todos os direitos reservados &copy;</p>
-    <p>Para conhecer outra pagina <a href="./pagina2.html" target="_blank">clique aqui.</a></p>
+    <p class="paragrafo-footer">Quiz de programação. todos os direitos reservados &copy;</p>
+    <p class="paragrafo-footer">Para conhecer a outra pagina <a href="./pagina2.html" target="_blank">clique aqui.</a></p>
   </footer>
   
 </body>
